# CDW_MedCP

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  README.md  manifest.json  pyproject.toml
data/: schema_reference.json
docs/plans/: 2026-02-20-cdw-medcp-design.md  2026-02-21-cdw-medcp-implementation.md
scripts/: parse_data_dictionary.py
server/: main.py
src/cdw_medcp/: __init__.py  __main__.py  cli.py  config.py  db.py  server.py  validation.py
src/cdw_medcp/tools/: __init__.py  concepts.py  export.py  notes.py  queries.py  schema.py  stats.py
